--- a/src/main/webapp/WEB-INF/activity/single-activity.html
+++ b/src/main/webapp/WEB-INF/activity/single-activity.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
         <title>ChillTribe - 活動細節</title>	
-				<link rel="icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
-				<link rel="shortcut icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+				<link rel="icon" href="../star-logo-nobg.png" type="image/png">
+				<link rel="shortcut icon" href="../star-logo-nobg.png" type="image/png">
         <!-- Custom CSS -->
         <link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
 		
@@ -585,7 +585,7 @@
 		<script src="../Full_Resido/_html/assets/js/imagesloaded.js"></script>
 		 
 		<script src="../Full_Resido/_html/assets/js/custom.js"></script>
-		<script src="http://localhost:8080/chill-tribe/core/constant.js"></script>
+		<script src="../core/constant.js"></script>
 
 		<!----- Navigation ----->
 		<script>
