--- a/src/main/webapp/WEB-INF/supplier/apply-activity.html
+++ b/src/main/webapp/WEB-INF/supplier/apply-activity.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ChillTribe - 申請活動</title>
-  <link rel="icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
-  <link rel="shortcut icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+  <link rel="icon" href="../star-logo-nobg.png" type="image/png">
+  <link rel="shortcut icon" href="../star-logo-nobg.png" type="image/png">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -506,6 +506,6 @@
     });
   });
 </script>
-<script src="http://localhost:8080/chill-tribe/core/constant.js"></script>
+<script src="../core/constant.js"></script>
 </body>
 </html>
