--- a/src/main/webapp/WEB-INF/supplier/preview-activity.html
+++ b/src/main/webapp/WEB-INF/supplier/preview-activity.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AdminLTE 3 | General Form Elements</title>
-  <link rel="icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
-	<link rel="shortcut icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+  <link rel="icon" href="../star-logo-nobg.png" type="image/png">
+	<link rel="shortcut icon" href="../star-logo-nobg.png" type="image/png">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -487,7 +487,7 @@
   });
 </script>
 
-<script src="http://localhost:8080/chill-tribe/core/constant.js"></script>
+<script src="../core/constant.js"></script>
 
 <!----- 接收後端的資料 ----->
 <script src="js/preview-activity.js"></script>
