check path variable

--- a/src/main/webapp/WEB-INF/order/order-details.html
+++ b/src/main/webapp/WEB-INF/order/order-details.html
@@ -241,6 +241,7 @@
 	</script>
 
 	<!-- ============================自定義js============================== -->
+	<script src="../core/constant.js"></script>
 	<script src="./js/order-details.js"></script>
 
 
