--- a/src/main/webapp/WEB-INF/activity/single-activity.html
+++ b/src/main/webapp/WEB-INF/activity/single-activity.html
@@ -591,7 +591,7 @@
 		<script>
 			$("#navigation").load("../member/fixed-member-navbar.html");
 			$("#footer").load("../member/fixed-member-footer.html");
-			$("#login").load("../member/fixed-member-login.html");
+			$("#login").load("../member/login.html");
 		</script>
 
 		<!----- 載入地址和郵遞區號 ----->
