--- a/src/main/webapp/WEB-INF/member/fixed-member-login.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-login.html
@@ -63,7 +63,7 @@
 			<div class="modal-divider">
 				<span>或其他登入方式</span>
 			</div>
-			<div class="social-login mb-3">
+			<div class="social-login mb-3" id="div_google">
 				<ul>
 					<li><a href="#" class="btn connect-google" id="btn_googlelogin">
 							<i class="ti-google"></i>Google+</a></li>
