--- a/src/main/webapp/WEB-INF/member/header.html
+++ b/src/main/webapp/WEB-INF/member/header.html
@@ -7,8 +7,8 @@
 		<nav id="navigation" class="navigation navigation-landscape">
 			<div class="nav-header">
 				<a class="nav-brand text-logo" id="logo_href"
-					href="/chilltribe.html"> <img src="./star-logo-nobg.png"
-					style="width: 40px; height: 40px;" />
+					href="/chilltribe.html"> <img src=""
+					style="width: 40px; height: 40px;" id="logo-img" />
 					<h5 class="fs-3 fw-bold ms-1 my-0">ChillTribe</h5>
 				</a>
 				<div class="nav-toggle"></div>
@@ -126,6 +126,15 @@
 <input type="hidden" id="member_id" value="">
 
 <script src="../core/constant.js"></script>
+
+<script>
+let logoPath = "http://localhost:8080/chill-tribe/star-logo-nobg.png"
+
+$(function () {
+	$("#logo-img").attr("src", logoPath)
+});
+
+</script>
 
 
 <script>
