--- a/src/main/webapp/WEB-INF/order/order-info.html
+++ b/src/main/webapp/WEB-INF/order/order-info.html
@@ -41,11 +41,13 @@
 		<!-- ============================================================== -->
 		<!-- Start Navigation -->
 
-		<div class="header header-light head-shadow">
+		<!-- <div class="header header-light head-shadow">
 			<div class="container">
 				<nav id="navigation" class="navigation navigation-landscape"></nav>
 			</div>
-		</div>
+		</div> -->
+
+		<header id="header"></header>
 
 		<!-- End Navigation -->
 		<div class="clearfix"></div>
@@ -290,7 +292,7 @@
 
 	<script>
 		// navbar load
-		$("#navigation").load("../member/fixed-member-navbar.html");
+		$("#header").load("../member/header.html");
 		$("#page-title").load("../member/fixed-member-page-title.html");
 		$("#narrow-view").load("../member/fixed-member-narrow-view.html");
 		$("#filter_search").load("../member/fixed-member-sidebar.html");
