update member login&header&sidebar

--- a/src/main/webapp/WEB-INF/member/fixed-member-login.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-login.html
@@ -221,6 +221,7 @@
 					console.log("GoogleEmail", data.email);
 					sessionStorage.setItem('memberid', data.memberid);
 					console.log("memberid", data.memberid);
+					localStorage.setItem('memberid', data.memberid);
 					//                 sessionStorage.setItem('name', data.name);
 					//             	sessionStorage.setItem('Access Token:', data.access_token);
 					setmembername(data.memberid);
