--- a/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
@@ -45,7 +45,7 @@
 									<ul class="no-ul-list navigation-list">
 										<li><a href="./member-details.html">個人資料</a></li>
 										<li><a href="./member-addresses.html">我的地址</a></li>
-										<li><a href="./member/member-change-password.html">更改密碼</a></li>
+										<li><a href="./member-change-password.html">更改密碼</a></li>
 									</ul>
 								</div>
 							</div>
@@ -232,7 +232,12 @@
 						icon: "success",
 						title: "上傳成功",
 						text: "成功換照片囉！",
-					});
+						confirmButtonText: '確定',
+					}).then((result) => {
+					  if (result.isConfirmed) {
+						  location.reload();
+					  }
+				});
 				} else {
 					Swal.fire({
 						icon: "error",
